compiler/parser.c
/* Parser (tokens -> tree) */
/* See also: grammar.txt */

/* 
 * Classical recursive descent shit,
 * but it's hand-coded so it's kind of a mess.
 * Note that this module actually involves a
 * fairly sane use of function pointers.
 */

#include <stdio.h>
#include <stdlib.h>
#include "hashtable.h"
#include "tokenizer.h"
#include "tokens.h"
#include "tree.h"
#include <string.h>

extern int escape_code(char c);

token_t *tokens;
int indx;
int tok_count;

/*
 * XXX: something like a hash table or bst would be smarter
 * for these dictionaries
 */

#define MAX_ENUMS 128
#define MAX_TYPEDEFS 64

char typedef_tag[32][MAX_TYPEDEFS];	     /* XXX: limited!*/
exp_tree_t typedef_desc[MAX_TYPEDEFS];	/* XXX: limited!*/
int typedefs = 0;

extern char* get_tok_str(token_t t);

exp_tree_t block();
exp_tree_t expr();
exp_tree_t expr0();
exp_tree_t sum_expr();
exp_tree_t shift_expr();
exp_tree_t mul_expr();
exp_tree_t ternary_expr();
exp_tree_t ccor_expr();
exp_tree_t ccand_expr();
exp_tree_t bor_expr();
exp_tree_t bxor_expr();
exp_tree_t band_expr();
exp_tree_t comp_expr();
exp_tree_t decl();
exp_tree_t decl2();
exp_tree_t cast();
exp_tree_t cast_type();
exp_tree_t arg();
exp_tree_t struct_decl();
exp_tree_t e1();
exp_tree_t e0();
exp_tree_t e0_2();
exp_tree_t e0_3();
exp_tree_t e0_4();
exp_tree_t int_const();
exp_tree_t initializer();
exp_tree_t enum_decl();
exp_tree_t enum_tag_decl();
int decl_dispatch(char type);

hashtab_t *enum_tags;

void printout(exp_tree_t et);
extern void fail(char* mesg);

int check_typedef(char *str)
{
	int i;
	for (i = 0; i < typedefs; ++i)
		if (!strcmp(typedef_tag[i], str))
			return 1;
	return 0;
}

exp_tree_t copy_tree(exp_tree_t src_a)
{
	exp_tree_t *src = &src_a;
    exp_tree_t et = new_exp_tree(src->head_type, src->tok);
    int i;

    for (i = 0; i < src->child_count; ++i)
            if (src->child[i]->child_count == 0)
                    add_child(&et, alloc_exptree(*src->child[i]));
            else
                    add_child(&et, alloc_exptree(copy_tree(*(src->child[i]))));

    return *alloc_exptree(et);
}

int indx_bound(int indx)
{
	if (indx > tok_count)
		indx = tok_count;
	return indx;
}

int adv()
{
	return indx_bound(++indx);
}

/* give the current token */
token_t peek()
{
	return tokens[indx];
}

/* generate a pretty error when parsing fails.
 * this is a hack-wrapper around the routine
 * in diagnostics.c that deals with certain
 * special cases special to the parser. */
void parse_fail(char *message)
{
	token_t tok;
	int line, chr;
	extern void compiler_fail(char *message,
		 token_t *token, int in_line, int in_chr);

	if (tokens[indx].from_line
		!= tokens[indx - 1].from_line) {
		/* end of the line */
		line = tokens[indx - 1].from_line;
		chr = strstr(code_lines[line], "\n")
			- code_lines[line] + 1;
	} else {
		line = tokens[indx].from_line;
		chr = tokens[indx].from_char;
	}

	compiler_fail(message, NULL, line, chr);
}

/*
 * Fail if the next token isn't of the desired type.
 * Otherwise, return it and advance.
 */
token_t need(char type)
{
	char buf[1024];
	if (tokens[adv() - 1].type != type) {
		fflush(stdout);
		--indx;
		sprintf(buf, "%s expected", tok_desc[type]);
		parse_fail(buf);
	} else
		return tokens[indx - 1];
}

/* main parsing loop */
exp_tree_t parse(token_t *t)
{
	exp_tree_t program;
	exp_tree_t *subtree;
	program = new_exp_tree(BLOCK, NULL);
	token_t end = { TOK_NOMORETOKENSLEFT, "", 0, 0, 0 };
	int i;

	/* set up enum tags dictionary */
	enum_tags = new_hashtab();

	/* count the tokens */
	for (i = 0; t[i].start; ++i)
		;
	t[tok_count = i] = end;

	/* the loop */
	tokens = t;
	indx = 0;
	while (tokens[indx].start) {
		subtree = alloc_exptree(block());
		/* parse fails at EOF */
		if (!valid_tree(*subtree))
			break;
		add_child(&program, subtree);
	}

	return program;
}

/* 
 * Now the real fun starts. Each routine is
 * named after the part of the grammar that
 * it deals with. When it doesn't find anything
 * that it's been trained to find, a routine
 * gives back "null_tree". "indx" is a global
 * variable giving the current token index.
 * Don't ask why, but using a variable called
 * "index" made some compilers on some systems
 * very unhappy.
 */

/*
 * cast := '(' cast-type ')' e0
 */
exp_tree_t cast()
{
	exp_tree_t tree, ct, ue;
	int restor;

	if (peek().type == TOK_LPAREN) {
		restor = adv() - 1;	/* eat '(' */
		if (valid_tree(ct = cast_type())) {
			/* okay, it has to be a cast */
			tree = new_exp_tree(CAST, NULL);
			add_child(&tree, alloc_exptree(ct));
			need(TOK_RPAREN);	/* eat and check ')' */
			if (!valid_tree(ue = e1()))
				parse_fail("unary expression expected after cast");
			add_child(&tree, alloc_exptree(ue));
			return tree;
		} else
			indx = restor;	/* backtrack and leave */
	}
	return null_tree;
}

/*
 * cast-type := basic-type {'*'} | <typedef-tag> {'*'}
 *				 | 'struct' ident {'*'}
 *				 | 'enum' identifier
 */
exp_tree_t cast_type()
{
	token_t bt;
	exp_tree_t btt, btct, ct, star;
	char *str = get_tok_str(peek());
	int i, sav_indx;

	/* enum 'identifier': synonym for int for all I care */
	if (peek().type == TOK_ENUM) {
		sav_indx = adv() - 1;
		if (peek().type == TOK_IDENT) {
			adv();
			if (peek().type != TOK_LBRACE) {
				btct = new_exp_tree(INT_DECL, NULL);
				goto cast_typedef;
			}
		}
		indx = sav_indx;
	}

	/* 'struct' ident ... */
	if (peek().type == TOK_STRUCT) {
		sav_indx = adv() - 1;
		bt = peek();
		adv();
		if (bt.type != TOK_IDENT || peek().type == TOK_LBRACE) {
			indx = sav_indx;
		} else {
			btct = new_exp_tree(NAMED_STRUCT_DECL, &bt);
			goto cast_typedef;
		}
	}

	for (i = 0; i < typedefs; ++i) {
		if (!strcmp(typedef_tag[i], str)) {
			adv();
			btct = copy_tree(typedef_desc[i]);
			if (btct.head_type == CAST_TYPE) {
				ct = btct;
				goto cast_typedef_2;
			}
			goto cast_typedef;
		}
	}

	if (is_basic_type((bt = peek()).type)) {
		adv();			/* eat basic-type */
		btct = new_exp_tree(decl_dispatch(bt.type), NULL);
cast_typedef:
		ct = new_exp_tree(CAST_TYPE, NULL);
		btt = new_exp_tree(BASE_TYPE, NULL);
		add_child(&btt, alloc_exptree(btct));
		add_child(&ct, alloc_exptree(btt));
cast_typedef_2:
		star = new_exp_tree(DECL_STAR, NULL);
		while (peek().type == TOK_MUL)
			adv(), add_child(&ct, alloc_exptree(star));
		return ct;
	} else if(valid_tree((btt = struct_decl())))
		return btt;

	return null_tree;
}

/* 
 * decl := (basic-type | struct-decl | enum-decl | 'enum' identifier) decl2 { ','  decl2 } 
 *	   | struct-decl
 *	   | enum-decl
 */
int decl_dispatch(char type)
{
	switch (type) {
		case TOK_VOID:
			return VOID_DECL;
		break;
		case TOK_INT:
			return INT_DECL;
		break;
		case TOK_LONG:
			return LONG_DECL;
		break;
		case TOK_CHAR:
			return CHAR_DECL;
		break;
	}
}
int decl_dedispatch(char type)
{
	switch (type) {
		case VOID_DECL:
			return TOK_VOID;
		break;
		case INT_DECL:
			return TOK_INT;
		break;
		case LONG_DECL:
			return TOK_LONG;
		break;
		case CHAR_DECL:
			return TOK_CHAR;
		break;
	}
}
exp_tree_t decl()
{
	token_t tok = peek();
	exp_tree_t tree, subtree;
	exp_tree_t conv;
	char *str = get_tok_str(peek());
	int i, id;
	int td_decl = 0;
	int stars = 0;

	/* 
	 * (basic-type|struct-decl|enum-decl
	 *  |'enum' identifier|<typedef-tag>) 
	 *	decl2 { ','  decl2 }
  	 */
	for (i = 0; i < typedefs; ++i) {
		if (!strcmp(typedef_tag[i], str)) {
			adv();
			tree = copy_tree(typedef_desc[i]);
			#ifdef DEBUG
				fprintf(stderr, "tag: ");
				printout_tree(tree);
				fprintf(stderr, "\n");
			#endif
			/*
			 * CAST_TYPE tree format:
			 * - BASE_TYPE node with child in "_DECL" declaration type tree format
			 * - a number of DECL_STAR children
			 */
			if (tree.head_type == CAST_TYPE) {
				conv = copy_tree(*(tree.child[0]->child[0]));
				for (i = 0; i < tree.child_count; ++i)
					if (tree.child[i]->head_type == DECL_STAR)
						++stars;
				tree = conv;
			}
			goto decl_decl2;
		}
	}

	/* enum-decl */
	if (valid_tree((tree = enum_decl()))) {
		/*
		 * are there children args ? then
		 * enums are ints for all the codegen cares
		 * otherwise just give an empty block,
		 * again because the codegen doesn't care
		 */

		/* no declaration children */
		if (peek().type == TOK_SEMICOLON) {
			tree.head_type = BLOCK;
			tree.child_count = 0;
			return tree;
		}

		/* there are children */
		id = INT_DECL;
		goto int_decl;
	}

	/* enum 'identifier': synonym for int for all I care */
	if (peek().type == TOK_ENUM) {
		adv();
		(void)need(TOK_IDENT);
		id = INT_DECL;
		goto int_decl;
	}

	if (valid_tree((tree = struct_decl())))
		if (tree.head_type == STRUCT_DECL)
			goto decl_decl2;
		else
			return tree;	/* named struct reference */
	if(is_basic_type(tok.type)) {
		adv();	/* eat basic-type token */
		id = decl_dispatch(tok.type);
int_decl:
		tree = new_exp_tree(id, NULL);
decl_decl2:
		/* struct-decl alone: named struct decl, e.g. struct bob { ... }; */
		if (tree.head_type == STRUCT_DECL
			&& peek().type == TOK_SEMICOLON)
			return tree;

		while (1) {
			if (!valid_tree(subtree = decl2()))
				parse_fail("bad declaration syntax");
			/*
			 * pointer stars from typedef tag
			 */
			for (i = 0; i < stars; ++i)
				add_child(&subtree, alloc_exptree(new_exp_tree(DECL_STAR, NULL)));
			add_child(&tree, alloc_exptree(subtree));
			/* ',' decl2 */
			if (peek().type != TOK_COMMA)
				break;
			else
				adv();
		}
		return tree;
	}
	return null_tree;
}

/*
 * struct-decl := 'struct' [ident] '{' decl ';' { decl ';' } '}'
 *		 | 'struct' [ident] decl2 { ','  decl2 } ';'
 */
exp_tree_t struct_decl()
{
	exp_tree_t tree, subtree;
	token_t name;
	int sav_indx;
	token_t fake_anon_name = { TOK_IDENT, "<anonymous struct>", 0, 0, 0 };
	if (peek().type == TOK_STRUCT) {
		adv();
		/* [ident] */
		if ((name = peek()).type == TOK_IDENT)
			adv();
		else
			name = fake_anon_name;
		/* 'struct' [ident] '{' decl ';' { decl ';' } '}' */
		if (peek().type == TOK_LBRACE) {
			adv();
			tree = new_exp_tree(STRUCT_DECL, &name);
			while (peek().type != TOK_RBRACE) {
				subtree = decl();
				if (!valid_tree(subtree))
					parse_fail("member declaration expected in struct declaration");
				add_child(&tree, alloc_exptree(subtree));
				if (peek().type == TOK_SEMICOLON)
					adv();
				else
					break;
			}
			need(TOK_RBRACE);
			return tree;
		/* 'struct' [ident] decl2 { ','  decl2 } ';' */
		} else if (valid_tree((subtree = decl2()))) {
			tree = new_exp_tree(NAMED_STRUCT_DECL, &name);
			add_child(&tree, alloc_exptree(subtree));
			/* XXX: TODO: { , decl2 } repetition */
			return tree;
		} else
			indx = sav_indx;
	}
	return null_tree;
}

/*
 * decl2 := { '*' } ident [ { ('[' [integer] ']') } ] ['=' initializer]
 */
exp_tree_t decl2()
{
	token_t tok = peek();
	exp_tree_t tree, subtree, subtree2;
	int stars = 0;
	int i;
	token_t zero = { TOK_INTEGER, "0", 1, 0, 0 };
	int contains_ambig = 0;
	int ambig = 0;

	tree = new_exp_tree(DECL_CHILD, NULL);

	/* 
	 * Eat pointer-qualification 
	 * stars (as in "int ***ptr") for now. 
	 * The language currently compiled is actually
	 * typeless, but I need to write the star-qualifiers
	 * in the test code so automatic comparison with
	 * gcc-compiled output is possible.
	 */
	while (peek().type == TOK_MUL)
		adv(), ++stars;
	tok = need(TOK_IDENT);
	subtree = new_exp_tree(VARIABLE, &tok);
	add_child(&tree, alloc_exptree(subtree));
	if(peek().type == TOK_LBRACK) {
multi_array_decl:
		adv();	/* eat [ */
		ambig = 0;
		if (peek().type == TOK_INTEGER)
			tok = need(TOK_INTEGER);
		else {
			/*
			 * The meaning of [] depends upon context.
			 * There are two cases:
			 * - e.g. int foo[] = {1, 2, 3} -- it means an array
			 *   the size of which is to be figuerd out by the
			 *   compiler based on the initializer
			 *
			 * - e.g. char ptr[] = "Enjoy your teeth" -- it's
			 *   an ancient notation for a pointer star '*'
			 *
			 * The `contains_ambig' variable is set in this case,
			 * which delays the adding of any tree node to
			 * a later point in time, a point which occurs
		 	 * a few tokens ahead and at which the context
			 * of [] has been inferred.
			 */
			tok = zero;
			ambig = 1;
			contains_ambig = 1;
		}
		need(TOK_RBRACK);
		/* Don't add any nodes now if it's ambiguous, cf above */
		if (!ambig) {
			add_child(&tree, 
				alloc_exptree(new_exp_tree(ARRAY_DIM, &tok)));
		}
		if (peek().type == TOK_LBRACK)
			goto multi_array_decl;
	}
	
	/* initializer */
	if (peek().type == TOK_ASGN) {
		adv();	/* eat = */
		if (!valid_tree(subtree2 = initializer()))
			parse_fail("expected expression after =");

		/* 
		 * the first case for [], as in e.g.
		 * int foo[] = {1, 2, 3}
		 */
		if (contains_ambig) {
			if (subtree2.head_type == COMPLICATED_INITIALIZER) {
				add_child(&tree, 
					alloc_exptree(new_exp_tree(ARRAY_DIM, &zero)));
			}
		}

		add_child(&tree, alloc_exptree(subtree2));

		/*
		 * the second case for [], as in e.g.
		 * char ptr[] = "Enjoy your teeth"
		 */
		if (contains_ambig) {
			if (subtree2.head_type != COMPLICATED_INITIALIZER) {
				add_child(&tree, 
					alloc_exptree(new_exp_tree(DECL_STAR, NULL)));
			}
		}
	}
	
	/* add the pointer-stars */
	if (stars) {
		subtree = new_exp_tree(DECL_STAR, NULL);
		for (i = 0; i < stars; ++i)
			add_child(&tree,
				alloc_exptree(subtree));
	}

	return tree;
}

/*
 * initializer := expr0
 *               | '{' {'{'} expr0 {'}'} [ {',' {'{'} expr0 {'}'}}] '}'
 */
exp_tree_t initializer()
{
	exp_tree_t tree, child;
	int depth, depth2;
	if (valid_tree((tree = expr0())))
		return tree;
	/* '{' {'{'} expr0 {'}'} [ {',' {'{'} expr {'}'}}] '}' */
	if (peek().type == TOK_LBRACE) {
		tree = new_exp_tree(COMPLICATED_INITIALIZER, NULL);
		adv();
		depth2 = 0;
		while (1) {
			/* {'{'} */
			while (peek().type == TOK_LBRACE)
				++depth2, adv();
			child = expr0();
			if (!valid_tree(child))
				parse_fail("expression expected in array or struct initializer");
			add_child(&tree, alloc_exptree(child));
			/* {'}'} */
			if (depth2 && peek().type == TOK_RBRACE) {
				depth = 0;
				while (peek().type == TOK_RBRACE && depth < depth2) {
					depth++;
					adv();
				}
				depth2 = 0;
			}
			if (peek().type != TOK_COMMA)
				break;
			else
				adv();
		}
		need(TOK_RBRACE);
		return tree;
	}
	return null_tree;
}

/*
 * lvalue := ident
 *          | '(' cast-type ') lvalue
 *			| '(' lvalue ')'
 */
/* XXX: TODO: cast part */
exp_tree_t lval()
{
	token_t tok = peek();
	exp_tree_t tree, subtree, new_tree;
	int sav_indx;

	/* parenthesized lvalue */
	if (peek().type == TOK_LPAREN) {
		sav_indx = adv() - 1;
		if (valid_tree((subtree = lval()))) {
			if (peek().type == TOK_RPAREN) {
				adv();
				return subtree;
			}
		}
		indx = sav_indx;
	}

	if (tok.type == TOK_IDENT) {
		/* identifier alone -- variable */
		adv();	/* eat the identifier */

		#ifdef MINGW_BUILD
			/*
			 * hack for std{in,err,out} on mingw
			 */
			if (!strcmp(get_tok_str(tok), "stdin")
			    || !strcmp(get_tok_str(tok), "stderr")
			    || !strcmp(get_tok_str(tok), "stdout")) {
				return new_exp_tree(MINGW_IOBUF, &tok);
			}
		#endif
		return new_exp_tree(VARIABLE, &tok);
	}
	
	return null_tree;
}

/*
	block := expr ';' 
		| decl ';'
		| if '(' expr ')' block [else block] 
		| while '(' expr ')' block 
		| for '(' [expr] ';' [expr] ';' [expr] ')' block
		| switch '(' expr ')' '{' { [('case' num | 'default') ':'] [block] ['break' ';'] } '}'
		| '{' { expr ';' } '}' 
		| instr '(' expr0_1, expr0_2, ..., expr0_N ')' ';'
		| ident ':'
		| goto ident ';'
		| [cast-type] ident '(' arg { ',' arg } ')' (block | ';')
		| 'return' [expr] ';'
		| 'break' ';'
		| 'continue' ';'
		| 'typedef' cast-type ident ';'
*/
exp_tree_t block()
{
	int i, args;
	exp_tree_t tree, subtree;
	exp_tree_t subtree2, subtree3;
	exp_tree_t subtree4;
	exp_tree_t proctyp, ct;
	int typed_proc = 0;
	token_t tok;
	token_t one = { TOK_INTEGER, "1", 1, 0, 0 };
	exp_tree_t one_tree = new_exp_tree(NUMBER, &one);
	int sav_indx, ident_indx, arg_indx;
	int must_be_proto = 0;
	int deflab;
	
	/* return-value type before a procedure */
	sav_indx = indx;
	if (valid_tree(proctyp = cast_type()))
		typed_proc = 1;

	if (peek().type != TOK_IDENT)
		indx = sav_indx;

	/* bob(a, b, c) { ... } */
	if ((tok = peek()).type == TOK_IDENT) {
		ident_indx = indx;
		if (!typed_proc)
			sav_indx = indx;
		adv();
		/*
		 * Check that it is actually a procedure
		 * definition
		 */
		if (peek().type != TOK_LPAREN)
			goto not_proc;		
		adv();
		while (peek().type != TOK_RPAREN) {
			arg_indx = indx;
			ct = cast_type();
			indx = arg_indx;
			if (valid_tree(ct))
				goto is_proc;
			if (peek().type != TOK_IDENT)
				goto not_proc;
			adv();
			if (peek().type != TOK_RPAREN)
				if (peek().type != TOK_COMMA) {
					goto not_proc;
				} else {
					adv();
				}
		}
		adv();
		if (peek().type != TOK_LBRACE)
			goto not_proc;
is_proc:
		indx = indx_bound(ident_indx + 1);			
		tree = new_exp_tree(PROC, &tok);
		/* optional return type */
		if (typed_proc)
			add_child(&tree, alloc_exptree(proctyp));
		/* argument list */
		subtree = new_exp_tree(ARG_LIST, NULL);
		need(TOK_LPAREN);
		while (peek().type != TOK_RPAREN) {
			subtree2 = arg();
			if (!valid_tree(subtree2))
				parse_fail("argument expected");
			/*
			 * A PROTO_ARG node is passed if there
			 * is no identifier in the argument parse,
			 * as in e.g. "int*" or "void". this is
			 * only valid in prototypes, of course.
			 * XXX: foo(void) before a code-body 
			 * may have a special meaning, I don't remember...
			 */
			if (subtree2.head_type == PROTO_ARG) {
				must_be_proto = 1;
				subtree2.head_type = ARG;
			}
			add_child(&subtree, alloc_exptree(subtree2));
			if (peek().type != TOK_RPAREN)
				need(TOK_COMMA);
		}
		adv();
		add_child(&tree, alloc_exptree(subtree));
		/*
		 * If there's just a semicolon ahead,
		 * it's actually a prototype.
		 * XXX: prototypes like "int foo();",
		 * specifically the "()" part, do not work.
		 */
		if (peek().type == TOK_SEMICOLON) {
			adv();
			tree.head_type = PROTOTYPE;
			return tree;
		} else if (must_be_proto)
			/* 
			 * Cases like "int *", as noted earlier.
			 * FYI test case `test/x86/error/proto-arg.c' triggers this.
			 */
			parse_fail("declaration without an identifier "
				   "in a function definition's arguments list");
		subtree = block();
		if (!valid_tree(subtree))
			parse_fail("block expected");
		add_child(&tree, alloc_exptree(subtree));
		return tree;

not_proc:
		indx = sav_indx;
		/* carry on with other checks */
	}

	/* switch '(' expr ')' '{' { [('case' num | 'default') ':'] [block] ['break' ';'] } '}' */
	if (peek().type == TOK_SWITCH) {
		tok = peek();
		tree = new_exp_tree(SWITCH, &tok);
		adv();
		subtree = expr();
		if (!valid_tree(subtree))
			parse_fail("expression expected");
		add_child(&tree, alloc_exptree(subtree));
		need(TOK_LBRACE);
		for (;;) {
			/* (case INTEGER | default): .... */
			if (peek().type == TOK_CASE || peek().type == TOK_DEFAULT) {
				deflab = peek().type == TOK_DEFAULT;
				adv();
				if (!deflab) {
					subtree = int_const();
					if (!valid_tree(subtree))
						parse_fail("integer constant expected (n.b. i don't fold constant expressions yet sorry)");
					tok = *(subtree.tok);
				}
				need(TOK_COLON);
				if (deflab)
					subtree = new_exp_tree(SWITCH_DEFAULT, NULL);
				else
					subtree = new_exp_tree(SWITCH_CASE, &tok);
				add_child(&tree, alloc_exptree(subtree));
				for (;;) {
					if (peek().type == TOK_BREAK
					 || peek().type == TOK_CASE
					 || peek().type == TOK_RBRACE)
						break;
					subtree = block();
					if (!valid_tree(subtree))
						break;
					add_child(&tree, alloc_exptree(subtree));
				}
			}
			/* break */
			else if (peek().type == TOK_BREAK) {
				tok = peek();
				adv();
				need(TOK_SEMICOLON);
				subtree = new_exp_tree(SWITCH_BREAK, &tok);
				add_child(&tree, alloc_exptree(subtree));
			}
			/* } */
			else if (peek().type == TOK_RBRACE)
				break;
			else
				parse_fail("i'm confused by this switch statement");
		}
		need(TOK_RBRACE);
		return tree;
	}

	/* typedef cast-type ident ';' */
	if (peek().type == TOK_TYPEDEF) {
		adv();
		subtree = cast_type();
		if (!valid_tree(subtree))
			parse_fail("expected a declarator after 'typedef'");
		tok = need(TOK_IDENT);
		strcpy(typedef_tag[typedefs], get_tok_str(tok));
		typedef_desc[typedefs] = copy_tree(subtree);
		++typedefs;
		if (typedefs >= MAX_TYPEDEFS)
			parse_fail("too many typedefs, sorry, will eventually improve capacity");
		need(TOK_SEMICOLON);
		/*
		 * The left operand of the typedef must be coded
		 * itself *if* it is a struct -- structs need
		 * to be seen by the codegen so it can track struct
		 * tag names as in e.g. struct FOO { ... }; where
		 * FOO would be the tag name.
		 */
		if (subtree.head_type != STRUCT_DECL) {
			return new_exp_tree(BLOCK, NULL);
		}
		else
			return subtree;
	}
